in updateShortcutsForIndex(), check that the model does indeed have a valid index for the specified row indexes before accessing them. probably fixes the crash mentioned in 291886.

BUG: 291886
FIXED-IN: 4.8.1
MERGE: 4.8